--- a/force-app/main/default/classes/SummitEventsSubmitController.cls
+++ b/force-app/main/default/classes/SummitEventsSubmitController.cls
@@ -10,16 +10,17 @@ public with sharing class SummitEventsSubmitController {
     public Summit_Events_Instance__c eventInstance { get; set; }
     public List<Summit_Events_Appointment_Type__c> appointments { get; set; }
     public List<Summit_Events_Appointments__c> chosenAppointments { get; set; }
-    public String chosenFormatted { get; set; }
     public String templateSelected { get; set; }
     public Map <String, String> feesByIndex { get; set; }
-    public String navBreadCrumb { get; set; }
+    public String formattedNavDate { get; set; }
     public Boolean eventIsClosed { get; set; }
     public Boolean adminOpen { get; set; }
-    private List<Summit_Events_Fee__c> eventFees { get; set; }
+    public List<Summit_Events_Fee__c> eventFees { get; set; }
     public Double totalPaymentAmount { get; set; }
+    public String totalPaymentAmountFormatted {get;set;}
     public Double existingPaymentAmount { get; set; }
     public Double eventOnlyPaymentAmount { get; set; }
+    public String eventOnlyPaymentAmountFormatted { get; set; }
     public String paymentItemized { get; set; }
     public Boolean showPaymentButton { get; set; }
 
@@ -28,7 +29,7 @@ public with sharing class SummitEventsSubmitController {
 
         //Get cookie or URL string variable
         eventInformation = seaShared.getSummitEventsInfo();
-        chosenFormatted = '';
+
         if (!String.isEmpty(eventInformation.eventId)) {
             eventPage = [
                     SELECT Event_Name__c, Event_Submit_Title__c, Event_Submit_Description__c, Event_Footer__c, Template__c, Event_Home_Link_Title__c, Event_Home_Link_URL__c,
@@ -57,7 +58,7 @@ public with sharing class SummitEventsSubmitController {
                 eventIsClosed = seaShared.isEventClosed(eventPage, eventInstance);
             }
 
-            navBreadCrumb = seaShared.navBreadcrumbBuilder(eventInstance, false);
+            formattedNavDate = seaShared.navBreadcrumbBuilder(eventInstance);
         }
 
         if (!String.isBlank(eventInformation.registrationId)) {
@@ -69,21 +70,6 @@ public with sharing class SummitEventsSubmitController {
                     WITH SECURITY_ENFORCED
                     ORDER BY Appointment_Title__c
             ];
-            if (chosenAppointments.size() > 0) {
-                chosenFormatted += '<ul id="chosenAppointments" class="slds-list_dotted">';
-                for (Summit_Events_Appointments__c appointment : chosenAppointments) {
-                    String appointmentTitle = appointment.Appointment_Title__c;
-                    chosenFormatted += '<li>';
-                    chosenFormatted += appointmentTitle;
-                    if (!String.isEmpty(appointment.Appointment_Type__c)) {
-                        chosenFormatted += '<br/><em>' + appointment.Appointment_Type__c + '</em>';
-                    } else if (!String.isEmpty(appointment.Description__c)) {
-                        chosenFormatted += '<br/><em>' + appointment.Description__c + '</em>';
-                    }
-                    chosenFormatted += '</li>';
-                }
-                chosenFormatted += '</ul>';
-            }
 
             /** Check for preexisting payment **/
             List<Summit_Events_Payment__c> existingPayment = [SELECT Id, Payment_Amount__c, TouchnetReceiptNumber__c FROM Summit_Events_Payment__c WHERE Event_Registration__c = :eventInformation.registrationId];
@@ -102,68 +88,18 @@ public with sharing class SummitEventsSubmitController {
 
             if (eventFees.size() > 0) {
                 feesByIndex = new Map<String, String>();
-                paymentItemized = '<table class="slds-table slds-table_cell-buffer slds-table_bordered">';
-                paymentItemized += '<thead>';
-                paymentItemized += '<tr class="slds-line-height_reset">';
-                paymentItemized += '<th class="" scope="col">';
-                paymentItemized += '<div class="slds-truncate" title="Item">Item</div>';
-                paymentItemized += '</th>';
-                paymentItemized += '<th class="" scope="col">';
-                paymentItemized += '<div class="slds-truncate" title="Fee">Fee</div>';
-                paymentItemized += '</th>';
-                paymentItemized += '</thead><tbody>';
                 eventOnlyPaymentAmount = 0;
                 totalPaymentAmount = 0;
                 for (Summit_Events_Fee__c fee : eventFees) {
                     if (fee.Event_Fee__c != null && fee.Event_Fee__c > 0) {
                         totalPaymentAmount += fee.Event_Fee__c;
-                        if (!fee.Event_Fee_Type__c.equalsIgnoreCase('Event') || !fee.Event_Fee_Type__c.equalsIgnoreCase('Event Additional')) {
-                            if (fee.Event_Fee_Type__c.equalsIgnoreCase('Appointment')) {
-                                paymentItemized += '<tr class="eventAppointmentCost">';
-                                paymentItemized += '<td>' + String.valueOf(fee.Event_Appointment_Type__r.Title__c) + '</td>';
-                                paymentItemized += '<td>' + prettyCurrencyString(fee.Event_Fee__c) + '</td>';
-                                paymentItemized += '</tr>';
-                            } else if (fee.Event_Fee_Type__c.equalsIgnoreCase('Optional Donation')) {
-                                paymentItemized += '<tr class="eventDonation">';
-                                paymentItemized += '<td>' + fee.Event_Fee_Type__c;
-                                if (String.isNotBlank(fee.Event_Fee_Allocation__r.Name)) {
-                                    paymentItemized += ' - ' + fee.Event_Fee_Allocation__r.Name;
-                                }
-                                paymentItemized += '</td>';
-                                paymentItemized += '<td>' + prettyCurrencyString(fee.Event_Fee__c) + '</td>';
-                                paymentItemized += '</tr>';
-                            } else {
-                                eventOnlyPaymentAmount += fee.Event_Fee__c;
-                            }
-                        }
-                        if (feesByIndex.size() > 0 && feesByIndex.containsKey(fee.Event_Fee_Allocation__c)) {
-                            Decimal newFee = Decimal.valueOf(feesByIndex.get(fee.Event_Fee_Allocation__c));
-                            newFee = newFee + fee.Event_Fee__c;
-                            newFee = newFee.setScale(2);
-                            feesByIndex.put(fee.Event_Fee_Allocation__c, String.valueOf(newFee));
-                        } else {
-                            feesByIndex.put(fee.Event_Fee_Allocation__c, String.valueOf(fee.Event_Fee__c));
-                        }
-
                     }
                 }
-
-
                 if (existingPaymentAmount > 0) {
                     totalPaymentAmount = totalPaymentAmount - existingPaymentAmount;
                 }
-
-                paymentItemized += '<tr class="eventOnlyCost">';
-                paymentItemized += '<td>General Event</td>';
-                paymentItemized += '<td>' + prettyCurrencyString(eventOnlyPaymentAmount) + '</td>';
-                paymentItemized += '</tr>';
-
-                paymentItemized += '<tr class="eventTotalCost">';
-                paymentItemized += '<td><strong>Total Cost</strong></td>';
-                paymentItemized += '<td><strong>' + prettyCurrencyString(totalPaymentAmount) + '</strong></td>';
-                paymentItemized += '</tr>';
-
-                paymentItemized += '</tbody></table>';
+                eventOnlyPaymentAmountFormatted  = prettyCurrencyString(eventOnlyPaymentAmount);
+                totalPaymentAmountFormatted = prettyCurrencyString(totalPaymentAmount);
             }
             System.debug(paymentItemized);
             if (totalPaymentAmount > 0) {
